# cpp-husky-a200-path-planning

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  Dockerfile  README.md  dest_coordinates.txt  test_xy.txt
bitmaps/: 2dmap-01.pbm  2dmap-01.pnm  2dmap-01_1800x1800.pbm  2dmap-02.pbm  2dmap-02.pnm  2dmap-03.pnm  2dmap-test1.pnm  2dmap-test2.pnm  2dmap-test3.pbm  2dmap-test3.pnm  2dmap-test4.pnm  2dmap-test5.pnm  2dmap-test6.pbm  2dmap-test6.pnm  Boston_0_1860.pbm  Milan_1_1860.pbm  Shanghai_1_1860.pbm  grown_map_scale_4.pbm  map_scale_1.pbm  map_scale_2.pbm  map_scale_2.pnm  map_scale_4.pbm  map_scale_4.pnm  maze512-16-5.pbm  maze512-32-3.pbm  maze512-32-3.xcf  maze512-8-6.xcf  mazebig1860.pbm  mazetight1860.pbm  quad.pbm  test7.pbm  testmap1.pbm  testmap10.pbm  testmap2.pbm  testmap3.pbm  testmap4.pbm  testmap5.pbm  testmap6.pbm  testmap8.pbm  testmap9.pbm
cmake/: proj4  test
debugOutput/: 1-scaled input map.pnm  2-grow.pnm  3-initialPath.pnm  4-smoothpath.pnm
include/pathplanning/: Coordinates.h  DebugGrid.h  MainDriver.h  OccGrid.h  PathVisualization.h  Pixel.h  TestDriver.h  WaveNav.h
lib/: Coord.cpp  Coord.h  Coordinates.cpp  Coordinates.h  GridCell.cpp  GridCell.h  Navigator.cpp  Navigator.h  OccGrid.cpp  OccGrid.h  Point.cpp  Point.h  WaveNav.h  WavefrontNavigator.cpp  WavefrontNavigator.h
results/: euclidean.txt  hashed.txt  heuristic1.txt  mapscale1.txt  mapscale1quad.txt  mapscale2-1.txt  mapscale2.txt  mapscale4quad.txt  quad_map1.txt  quad_map2.txt  quad_map4.txt  scale2_quad.txt  thesis results.xlsx
src/: proj4.cc
src/pathplanning/: Coordinates.cpp  DebugGrid.cpp  MainDriver.cpp  OccGrid.cpp  PathVisualization.cpp  Pixel.cpp  TestDriver.cpp  WaveNav.cpp  main.cpp
